<resources>
    <string name="app_application_id" translatable="false">com.</string>
    <string name="welcome_message">Welcome to HakeemCare</string>
    <string name="apps_flyer_dev_key" translatable="false">TcTo4wEgFahmAN3pFtd7Xe</string>
    <string name="pdf_link" translatable="false">%sgenerate-pdf?request_id=%s&amp;client_id=%s</string>
    <string name="update_desc">You have new update for %s!</string>
    <string name="create_a_account">Create a %s\naccount to continue</string>
    <string name="allow">ALLOW</string>
    <string name="deny">Deny</string>
    <string name="settings">Settings</string>
    <string name="media_permission">This feature needs permission to use camera and external storage.</string>
    <string name="record_audio_permission">This feature needs permission to use record audio and external storage.</string>
    <string name="internet">Internet</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="ok">OK</string>
    <string name="alert">Alert</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login_using_email">Login using Email</string>
    <string name="signup_using_email">Sign Up using Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_moh_number">Enter moh number</string>
    <string name="we_need_your_phone">We need your Phone number to identify you.</string>
    <string name="we_need_your_map_number">We need your Moh number to identify you.</string>
    <string name="code_sent_to">Code sent to %s</string>
    <string name="resend_code">Resend code</string>
    <string name="didn_t_receive_the_code_yet">Didn’t receive the code yet?</string>
    <string name="verification">Verification</string>
    <string name="we_sent_you_a_code">We sent you a code to %s</string>
    <string name="enter_otp">Please enter otp</string>
    <string name="location">Location</string>
    <string name="chat">Chat</string>
    <string name="start_chat">Start Chat</string>
    <string name="patients">Patients</string>
    <string name="experience">Experience</string>
    <string name="reviews">Reviews</string>
    <string name="about">About</string>
    <string name="patient_address">Patient Address</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="invite_people">Invite People</string>
    <string name="version">Version %s</string>
    <string name="you_are_running_the_latest_version">You are running the latest version</string>
    <string name="appointments">Appointments</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="bio">Bio</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="download">Download</string>
    <string name="age">Age:</string>
    <string name="phone_number">Phone Number</string>
    <string name="moh_number">Moh Number</string>
    <string name="switch_to">Switch to</string>
    <string name="dob">DOB</string>
    <string name="dob_1">DOB: </string>
    <string name="we_need_your_email_password">We need your Email &amp; Password to identify you.</string>
    <string name="didn_t_have_an_account">Didn’t have an account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="wallet">Wallet</string>
    <string name="revenue">Revenue</string>
    <string name="calls">Calls</string>
    <string name="available_balance">Available Balance</string>
    <string name="pay_out">Pay-out</string>
    <string name="enter_name">Please enter name</string>
    <string name="select_dob">Please select DOB</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_correct_email">Please enter correct email</string>
    <string name="enter_password">Password length must be atleast 8 characters</string>
    <string name="enter_bio">Please enter bio</string>
    <string name="logout_dialog_message">Are you sure you want to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_data_found">No data found</string>
    <string name="s_completed">%s  Completed</string>
    <string name="unsuccessful">%s Unsuccessful</string>
    <string name="camera">Camera</string>
    <string name="select_image">Select image</string>
    <string name="select_document">Select document</string>
    <string name="update">Update</string>
    <string name="we_need_your_email">We need your registered email to reach you</string>
    <string name="sent_password">We have sent a temporary password in your email. Please check your email.</string>
    <string name="new_request">New Request</string>
    <string name="no_show">No show</string>
    <string name="canceled">Cancelled</string>
    <string name="cancel">Cancel</string>
    <string name="start_request">Start request</string>
    <string name="check_request">Check request</string>
    <string name="start_request_message">Are you sure you want to proceed request</string>
    <string name="add_money">Add Money</string>
    <string name="added_to_wallet">Added to wallet</string>
    <string name="failed_transaction">Transaction failed</string>
    <string name="accept_request">Accept request</string>
    <string name="accept_request_message">Are you sure you want to accept this request</string>
    <string name="mark_complete">Mark Complete</string>
    <string name="mark_complete_message">Are you sure you want to complete this request</string>
    <string name="accepted">Accepted</string>
    <string name="inprogess">In progress</string>
    <string name="starting_call">Starting a call…</string>
    <string name="starting_chat">Starting a chat</string>
    <string name="money_received_from">Received from\n%s</string>
    <string name="na">NA</string>
    <string name="typing">Typing…</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="active_now">Active now</string>
    <string name="offline">Offline</string>
    <string name="enter_message">Enter message</string>
    <string name="type_your_message_here">Type your message…</string>
    <string name="photo">Photo</string>
    <string name="chat_first_message">Hi %s\nI am Available for chat lets discuss the problem</string>
    <string name="end_chat">End Chat</string>
    <string name="end_n_chat">End\nChat</string>
    <string name="end_chat_desc">This will end chat. You ll no longer be able to chat</string>
    <string name="bank_account">Here is the bank account</string>
    <string name="bank_info">Bank details</string>
    <string name="account_number">Account number</string>
    <string name="account_name">Account Holder name</string>
    <string name="bank_name">Bank name</string>
    <string name="ifsc_code">IFSC code</string>
    <string name="select_currency">Select currency</string>
    <string name="add_bank">Add Bank</string>
    <string name="edit_bank">Edit Bank</string>
    <string name="card_ending_with">%s Card ending with %s</string>
    <string name="years">years</string>
    <string name="total_revenue_made">Total Revenue made</string>
    <string name="request_completed">Request completed</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="classes">Classes</string>
    <string name="broadcasts">Broadcasts</string>
    <string name="add_new">Add new</string>
    <string name="add_class">Add class</string>
    <string name="select_date">Select date</string>
    <string name="select_future_date">Select Future date</string>
    <string name="select_previos_date">Select Previous date</string>
    <string name="select_time">Select time</string>
    <string name="price_of_class">Price of class</string>
    <string name="class_name">Class Name</string>
    <string name="class_time">Class Time</string>
    <string name="class_price">Class Price</string>
    <string name="start_class">Start Class</string>
    <string name="select_category">Select Category</string>
    <string name="category">Category</string>
    <string name="start_class_message">By starting CLASS you ll make this class available for all who occupied. Want to start class?</string>
    <string name="user_joined">User Joined</string>
    <string name="complete_class">Class Completed</string>
    <string name="complete_class_message">Are you sure want to complete this class?</string>
    <string name="s_s_reviews">%s · %s Reviews</string>
    <string name="greater_time">End time must be greater than start time</string>
    <string name="manage_availability">Manage Availability</string>
    <string name="select_a_category">Select a Category</string>
    <string name="let_us_know_who_you">Let us know which category suits your profile the most to continue</string>
    <string name="select_sub_category">Select Sub-Category</string>
    <string name="full_name">Full Name</string>
    <string name="since_working">Working Since</string>
    <string name="next">Next</string>
    <string name="consultation_fees">Consultation Fees</string>
    <string name="for_">For</string>
    <string name="add_availability">Add availability</string>
    <string name="add_availability_s">Add availability for %s</string>
    <string name="service_type">Service Type</string>
    <string name="set_preferences">Set Preferences</string>
    <string name="from">From</string>
    <string name="new_interval">+ New Interval</string>
    <string name="sunday_w">S</string>
    <string name="monday_w">M</string>
    <string name="tuesday_w">T</string>
    <string name="wednesday_w">W</string>
    <string name="thursday_w">T</string>
    <string name="friday_w">F</string>
    <string name="saturday_w">S</string>
    <string name="week_days">Week Days</string>
    <string name="select_availability">Select Availability</string>
    <string name="save">Save</string>
    <string name="fixed_price">Fixed Price</string>
    <string name="price_btw">Add price in %s to %s</string>
    <string name="edit_availability">Edit availability</string>
    <string name="select_service">Please select any service</string>
    <string name="add_price_for">Add price for %s</string>
    <string name="add_price__in_s">Add price in %s to %s for %s</string>
    <string name="enter_title">Please select Title</string>
    <string name="update_category">Update Category</string>
    <string name="manage_preferences">Manage Preferences</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="for_s">For %s</string>
    <string name="all_s">All %s</string>
    <string name="all_weekdays">All Weekdays</string>
    <string name="dr">Dr.</string>
    <string name="mr">Mr.</string>
    <string name="input_amount">Input amount</string>
    <string name="select">Select</string>
    <string name="request_for_payment">Request for Payment</string>
    <string name="gallary">Gallary</string>
    <string name="upload_document">Upload Document</string>
    <string name="action">ACTION</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="code">CODE</string>
    <string name="title_1">TITLE</string>
    <string name="get_from_list_diagnos">Get From List</string>
    <string name="add_manualy_by_entering_code_and_medicine_name_in_search">Add manualy by entering code and medicine name in search and click on done</string>
</resources>