<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_4"
        android:src="@drawable/ic_cross"
        app:layout_constraintTop_toTopOf="@+id/dialogTitle"
        app:layout_constraintBottom_toBottomOf="@+id/dialogTitle"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGetFromApi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:fontFamily="@font/campton_medium"
        android:text="@string/get_from_list_diagnos"
        app:layout_constraintTop_toBottomOf="@id/dialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAddManualy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/campton_medium"
        android:text="@string/add_manualy_by_entering_code_and_medicine_name_in_search"
        app:layout_constraintTop_toBottomOf="@id/tvGetFromApi"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@drawable/drawable_bg_button"
        android:paddingStart="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_48"
        android:fontFamily="@font/campton_book"
        android:hint="@string/search"
        android:imeOptions="actionSearch"
        android:inputType="textCapSentences"
        android:maxLength="50"
        android:padding="@dimen/dp_8"
        android:textColor="@color/textColor"
        android:textDirection="locale"
        android:textSize="@dimen/sp_14"
        app:layout_constraintTop_toBottomOf="@+id/tvAddManualy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_4"
        android:src="@drawable/ic_search_app"
        app:layout_constraintTop_toTopOf="@id/etSearch"
        app:layout_constraintBottom_toBottomOf="@id/etSearch"
        app:layout_constraintEnd_toEndOf="@+id/etSearch" />

    <TextView
        android:id="@+id/tvDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_14"
        android:layout_marginTop="@dimen/dp_4"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/campton_book"
        android:text="@string/done"
        app:layout_constraintTop_toBottomOf="@id/etSearch"
        app:layout_constraintEnd_toEndOf="@id/etSearch"/>


    <!-- Header Row -->
    <LinearLayout
        android:id="@+id/headerRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_8"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_1"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_weight="2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_weight="1" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/headerRow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_12" />

</androidx.constraintlayout.widget.ConstraintLayout>