<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:elevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back_white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:elevation="4dp"
            android:fontFamily="@font/campton_semibold"
            android:gravity="center"
            android:text="@string/select_availability"
            android:textColor="@color/textColor"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWeekDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_16"
            android:fontFamily="@font/campton_semibold"
            android:text="@string/week_days"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWeek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWeekDays" />



        <TextView
            android:id="@+id/tvAddAvailability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:fontFamily="@font/campton_semibold"
            android:text="@string/add_availability"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvWeek" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListing"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_16"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/tvNext"
            app:layout_constraintTop_toBottomOf="@+id/tvAddAvailability" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_24"
            android:background="@drawable/drawable_alternate_button"
            android:fontFamily="@font/campton_semibold"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_24"
            android:background="@drawable/drawable_theme_stroke_60"
            android:fontFamily="@font/campton_semibold"
            android:gravity="center"
            android:visibility="invisible"
            android:text="@string/for_s"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvDays"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDays"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_24"
            android:background="@drawable/drawable_theme_stroke_60"
            android:fontFamily="@font/campton_semibold"
            android:gravity="center"
            android:text="@string/all_s"
            android:visibility="invisible"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvDate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAllWeekDays"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_24"
            android:background="@drawable/drawable_theme_stroke_60"
            android:fontFamily="@font/campton_semibold"
            android:gravity="center"
            android:visibility="invisible"
            android:text="@string/all_weekdays"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toTopOf="@+id/tvDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            android:id="@+id/clLoader"
            layout="@layout/item_loader"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvWeek" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>