<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_rounded_top">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_36">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_24"
                android:fontFamily="@font/campton_semibold"
                android:gravity="center"
                android:text="@string/request_for_payment"
                android:textColor="@color/textColor"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@color/lineColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeader" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilPayment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:hint="@string/input_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPayment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/campton_medium"
                    android:imeOptions="actionNext"
                    android:textDirection="locale"
                    android:inputType="numberDecimal"
                    android:maxLength="4"
                    android:digits="0123456789"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/sp_16" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ilPayment">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/campton_medium"
                    android:gravity="start"
                    android:hint="@string/description"
                    android:textDirection="locale"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="3"
                    android:maxLength="100"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/sp_16" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_24"
                android:background="@drawable/drawable_alternate_button"
                android:fontFamily="@font/campton_semibold"
                android:gravity="center"
                android:text="@string/request_for_payment"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ilDescription" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>